refactor: modernize to use ProcessBuilder